toupcam/raw_sdk/android/samples/demoandroid/app/src/main/jni/libusbcam/toupcam.h

#define E_NOTIMPL           (HRESULT)(0x80004001)  
typedef struct Toupcam_t { int unused; } *HToupcam, *HToupCam;
typedef struct {
#if defined(_WIN32)
    const wchar_t*      name;        
#else
    const char*         name;        
#endif
    unsigned long long  flag;        
    unsigned            maxspeed;    
    unsigned            preview;     
    unsigned            still;       
    unsigned            maxfanspeed; 
    unsigned            ioctrol;     
    float               xpixsz;      
    float               ypixsz;      
    ToupcamResolution   res[16];
} ToupcamModelV2; 
typedef struct {
#if defined(_WIN32)
    wchar_t               displayname[64];    
    wchar_t               id[64];             
#else
    char                  displayname[64];    
    char                  id[64];             
#endif
    const ToupcamModelV2* model;
} ToupcamDeviceV2; 
TOUPCAM_API(const wchar_t*)   Toupcam_Version();
TOUPCAM_API(const char*)      Toupcam_Version();
TOUPCAM_API(unsigned) Toupcam_EnumV2(ToupcamDeviceV2 arr[TOUPCAM_MAX]);
TOUPCAM_API(HToupcam) Toupcam_Open(const wchar_t* camId);
TOUPCAM_API(HToupcam) Toupcam_Open(const char* camId);
TOUPCAM_API(void)     Toupcam_Close(HToupcam h);
TOUPCAM_API(HRESULT)  Toupcam_StartPullModeWithWndMsg(HToupcam h, HWND hWnd, UINT nMsg);
typedef void (__stdcall* PTOUPCAM_EVENT_CALLBACK)(unsigned nEvent, void* ctxEvent);
TOUPCAM_API(HRESULT)  Toupcam_StartPullModeWithCallback(HToupcam h, PTOUPCAM_EVENT_CALLBACK funEvent, void* ctxEvent);
typedef struct {
    unsigned            width;
    unsigned            height;
    unsigned            flag;       
    unsigned            seq;        
    unsigned long long  timestamp;  
    unsigned            shutterseq; 
    unsigned            expotime;   
    unsigned short      expogain;   
    unsigned short      blacklevel; 
} ToupcamFrameInfoV3;
typedef struct {
    ToupcamFrameInfoV3 v3;
    unsigned reserved; 
    unsigned uLum;
    unsigned long long uFV;
    unsigned long long timecount;
    unsigned framecount, tricount;
    ToupcamGps gps;
} ToupcamFrameInfoV4;
TOUPCAM_API(HRESULT)  Toupcam_PullImageV4(HToupcam h, void* pImageData, int bStill, int bits, int rowPitch, ToupcamFrameInfoV4* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_WaitImageV4(HToupcam h, unsigned nWaitMS, void* pImageData, int bStill, int bits, int rowPitch, ToupcamFrameInfoV4* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_PullImageV3(HToupcam h, void* pImageData, int bStill, int bits, int rowPitch, ToupcamFrameInfoV3* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_WaitImageV3(HToupcam h, unsigned nWaitMS, void* pImageData, int bStill, int bits, int rowPitch, ToupcamFrameInfoV3* pInfo);
typedef struct {
    unsigned            width;
    unsigned            height;
    unsigned            flag;       
    unsigned            seq;        
    unsigned long long  timestamp;  
} ToupcamFrameInfoV2;
TOUPCAM_API(HRESULT)  Toupcam_PullImageV2(HToupcam h, void* pImageData, int bits, ToupcamFrameInfoV2* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_PullStillImageV2(HToupcam h, void* pImageData, int bits, ToupcamFrameInfoV2* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_PullImageWithRowPitchV2(HToupcam h, void* pImageData, int bits, int rowPitch, ToupcamFrameInfoV2* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_PullStillImageWithRowPitchV2(HToupcam h, void* pImageData, int bits, int rowPitch, ToupcamFrameInfoV2* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_TriggerSyncV4(HToupcam h, unsigned nWaitMS, void* pImageData, int bits, int rowPitch, ToupcamFrameInfoV4* pInfo);
TOUPCAM_API(HRESULT)  Toupcam_TriggerSync(HToupcam h, unsigned nWaitMS, void* pImageData, int bits, int rowPitch, ToupcamFrameInfoV3* pInfo);
typedef void (__stdcall* PITOUPCAM_PROGRESS)(int percent, void* ctxProgress);
typedef void (__stdcall* PITOUPCAM_HISTOGRAM_CALLBACKV2)(const unsigned* aHist, unsigned nFlag, void* ctxHistogramV2);
TOUPCAM_API(HRESULT)  Toupcam_FfcExport(HToupcam h, const wchar_t* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FfcImport(HToupcam h, const wchar_t* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FfcExport(HToupcam h, const char* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FfcImport(HToupcam h, const char* filePath);
TOUPCAM_API(HRESULT)  Toupcam_DfcExport(HToupcam h, const wchar_t* filePath);
TOUPCAM_API(HRESULT)  Toupcam_DfcImport(HToupcam h, const wchar_t* filePath);
TOUPCAM_API(HRESULT)  Toupcam_DfcExport(HToupcam h, const char* filePath);
TOUPCAM_API(HRESULT)  Toupcam_DfcImport(HToupcam h, const char* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FpncExport(HToupcam h, const wchar_t* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FpncImport(HToupcam h, const wchar_t* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FpncExport(HToupcam h, const char* filePath);
TOUPCAM_API(HRESULT)  Toupcam_FpncImport(HToupcam h, const char* filePath);
TOUPCAM_API(HRESULT)  Toupcam_GetHistogramV2(HToupcam h, PITOUPCAM_HISTOGRAM_CALLBACKV2 funHistogramV2, void* ctxHistogramV2);
TOUPCAM_API(HRESULT)  Toupcam_write_EEPROM(HToupcam h, unsigned addr, const unsigned char* pBuffer, unsigned nBufferLen);
TOUPCAM_API(HRESULT)  Toupcam_read_EEPROM(HToupcam h, unsigned addr, unsigned char* pBuffer, unsigned nBufferLen);
TOUPCAM_API(HRESULT)  Toupcam_read_Pipe(HToupcam h, unsigned pipeId, void* pBuffer, unsigned nBufferLen);
TOUPCAM_API(HRESULT)  Toupcam_write_Pipe(HToupcam h, unsigned pipeId, const void* pBuffer, unsigned nBufferLen);
                                                            2 = soft flush, discard frames cached by toupcam.dll (if any)
                                                            3 = both flush
                                                            Toupcam_Flush means 'both flush'
                                                            return the number of soft flushed frames if successful, HRESULT if failed
                                                         */
#define TOUPCAM_OPTION_NUMBER_DROP_FRAME      0x3e       
 or
                                                                1 => reduce exposure time/gain in proportion to current and target brightness.
                                                                n(n>1) => first adjust the exposure time to (maximum automatic exposure time * maximum automatic exposure gain) * n / 1000, and then adjust according to the strategy of 1
                                                            The advantage of policy 0 is that the convergence speed is faster, but there is black screen.
                                                            Policy 1 avoids the black screen, but the convergence speed is slower.
                                                            Default: 0
                                                         */
#define TOUPCAM_OPTION_READOUT_MODE           0x69       
#define TOUPCAM_OPTION_TAILLIGHT              0x6a       
TOUPCAM_API(HRESULT)  Toupcam_write_UART(HToupcam h, const unsigned char* pData, unsigned nDataLen);
TOUPCAM_API(HRESULT)  Toupcam_read_UART(HToupcam h, unsigned char* pBuffer, unsigned nBufferLen);
typedef void (__stdcall* PTOUPCAM_HOTPLUG)(void* ctxHotPlug);
TOUPCAM_API(HRESULT)  Toupcam_GigeEnable(PTOUPCAM_HOTPLUG funHotPlug, void* ctxHotPlug);
TOUPCAM_API(void)   Toupcam_HotPlug(PTOUPCAM_HOTPLUG funHotPlug, void* ctxHotPlug);
TOUPCAM_API(HRESULT) Toupcam_Replug(const wchar_t* camId);
TOUPCAM_API(HRESULT) Toupcam_Replug(const char* camId);
TOUPCAM_API(const ToupcamModelV2*) Toupcam_get_Model(unsigned short idVendor, unsigned short idProduct);
TOUPCAM_API(HRESULT)  Toupcam_Update(const wchar_t* camId, const wchar_t* filePath, PITOUPCAM_PROGRESS funProgress, void* ctxProgress);
TOUPCAM_API(HRESULT)  Toupcam_Update(const char* camId, const char* filePath, PITOUPCAM_PROGRESS funProgress, void* ctxProgress);
TOUPCAM_API(HRESULT)  Toupcam_Gain2TempTint(const int gain[3], int* temp, int* tint);
TOUPCAM_API(void)     Toupcam_TempTint2Gain(const int temp, const int tint, int gain[3]);